--- a/app/src/main/res/layout/activity_init_car_sim.xml
+++ b/app/src/main/res/layout/activity_init_car_sim.xml
@@ -28,6 +28,7 @@
         android:textSize="14dp"/>
 
     <TextView
+        android:id="@+id/tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv1"
@@ -35,4 +36,32 @@
         android:layout_marginTop="15dp"
         android:text="请您保证车辆处于信号良好的区域"
         android:textSize="14dp"/>
+
+    <TextView
+        android:id="@+id/sim_txt_warning"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="初始化失败，请您保证车辆处于信号良好的区域，并点击下方重试按钮，重新进行初始化"
+        android:textSize="15dp"
+        android:layout_below="@id/tv2"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:drawableLeft="@drawable/iv_warning"
+        android:drawablePadding="5dp"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/sim_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        style="@style/public_bottom_btn"
+        android:text="重试"
+        android:layout_below="@id/sim_txt_warning"
+        android:visibility="gone"
+        />
 </RelativeLayout>
