座驾页面底部布局调整;

--- a/app/src/main/res/layout/fragment_carmain_layout.xml
+++ b/app/src/main/res/layout/fragment_carmain_layout.xml
@@ -354,8 +354,10 @@
             android:layout_height="102dp"
             android:layout_below="@+id/ll"
             android:layout_marginTop="15dp"
-            android:weightSum="3"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            >
 
             <TextView
                 android:id="@+id/car_main_txt_tire"
@@ -392,10 +394,11 @@
                 />
             <TextView
                 android:id="@+id/car_main_txt_icon"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="--"
                 android:paddingTop="20dp"
+                android:layout_marginLeft="20dp"
                 android:textColor="@color/title_bg"
                 android:textSize="@dimen/text_size_small_s1"
                 />
