--- a/app/src/main/res/layout-xhdpi/dialog_download.xml
+++ b/app/src/main/res/layout-xhdpi/dialog_download.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/dialog_download_content"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="野马"
+                android:text="大乘智享"
                 android:textColor="#505050"
                 android:textSize="16sp" />
 
