--- a/app/src/main/res/layout/fragment_carmain_layout.xml
+++ b/app/src/main/res/layout/fragment_carmain_layout.xml
@@ -104,7 +104,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="27dip"
                             android:layout_below="@id/car_main_lay_safety_lay2"
-                            android:gravity="center"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:singleLine="true"
                             android:text="--"
                             android:textColor="@color/title_bg"
                             android:textSize="24sp"/>
@@ -123,8 +125,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:src="@drawable/ic_div_line"/>
 
                 <LinearLayout
@@ -146,9 +148,11 @@
                         <TextView
                             android:id="@+id/tvRenewal"
                             android:layout_width="wrap_content"
-                            android:layout_height="27dip"
+                            android:layout_height="wrap_content"
                             android:layout_below="@id/car_main_lay_safety_lay2"
-                            android:gravity="center"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:singleLine="true"
                             android:text="--"
                             android:textColor="@color/title_bg"
                             android:textSize="24sp"/>
@@ -167,8 +171,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:src="@drawable/ic_div_line"/>
 
                 <LinearLayout
@@ -192,7 +196,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="27dip"
                             android:layout_below="@id/car_main_lay_safety_lay2"
-                            android:gravity="center"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:singleLine="true"
                             android:text="--"
                             android:textColor="@color/title_bg"
                             android:textSize="24sp"/>
@@ -365,8 +371,8 @@
                 android:layout_width="0dip"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:drawablePadding="6dp"
                 android:drawableTop="@drawable/tire_car_main_selecter"
+                android:drawablePadding="6dp"
                 android:text="胎压监测"
                 android:visibility="gone"
                 />
@@ -377,8 +383,8 @@
                 android:layout_width="0dip"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:drawablePadding="6dp"
                 android:drawableTop="@drawable/find_car_main_selecter"
+                android:drawablePadding="6dp"
                 />
 
             <TextView
@@ -387,18 +393,19 @@
                 android:layout_width="0dip"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:drawablePadding="6dp"
                 android:drawableTop="@drawable/daohang_car_main_selecter"
+                android:drawablePadding="6dp"
                 android:text="导航同步"
                 android:visibility="gone"
                 />
+
             <TextView
                 android:id="@+id/car_main_txt_icon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="--"
-                android:paddingTop="20dp"
                 android:layout_marginLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="--"
                 android:textColor="@color/title_bg"
                 android:textSize="@dimen/text_size_small_s1"
                 />
