--- a/app/src/main/res/layout/activity_gps_trail.xml
+++ b/app/src/main/res/layout/activity_gps_trail.xml
@@ -57,12 +57,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="#BFFFFFFF"
         android:orientation="vertical"
-        android:paddingBottom="6dip"
-        android:paddingLeft="12dip"
-        android:paddingRight="12dip"
-        android:paddingTop="6dip" >
+        android:paddingLeft="35dp"
+        android:paddingTop="6dip"
+        android:paddingBottom="6dip" >
 
         <RelativeLayout
             android:layout_width="fill_parent"
