--- a/app/src/main/res/layout/activity_remote_log.xml
+++ b/app/src/main/res/layout/activity_remote_log.xml
@@ -3,17 +3,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/layout_background"
-    >
+                android:padding="12dp">
 
     <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/remotelog_list"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="10dp"
-
-      >
+        >
 
     </com.carlt.doride.ui.pull.PullToRefreshListView>
 </RelativeLayout>
