--- a/app/src/main/res/layout/activity_activate_step.xml
+++ b/app/src/main/res/layout/activity_activate_step.xml
@@ -17,7 +17,7 @@
         android:background="@color/white"
         android:padding="10dp">
 
-        <com.shuhart.stepview.StepView
+        <com.carlt.doride.ui.view.stepview.StepView
             android:id="@+id/step_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
