--- a/app/src/main/res/layout/activity_searchaddr.xml
+++ b/app/src/main/res/layout/activity_searchaddr.xml
@@ -117,7 +117,7 @@
                 android:layout_marginRight="20dip"
                 android:layout_marginTop="10dip"
                 android:text="等待中"
-                android:textColor="#fff"
+                android:textColor="@color/text_color_gray1"
                 android:textSize="14sp"/>
         </LinearLayout>
         <include
