--- a/app/src/main/res/layout/activity_activate_step.xml
+++ b/app/src/main/res/layout/activity_activate_step.xml
@@ -107,7 +107,7 @@
         android:layout_marginTop="25dp"
         android:drawablePadding="8dp"
         android:gravity="center"
-        android:text="如果多次重试后仍无法连接设备，请拔打400000000"
+        android:text="如果多次重试后仍无法连接设备，请拔打400-855-3771"
         android:textColor="@color/text_color_gray1"
         android:textSize="12dp"
         android:visibility="gone"/>
